--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -19,6 +19,8 @@
     {% include core/footer.html %}
     <!-- /Footer-->
 
+    {% include core/mess.html %}
+    
     <!--Back to top-->
     {% include core/back-top.html %}
     <!--/Back to top-->
