--- a/_layouts/detail.html
+++ b/_layouts/detail.html
@@ -20,7 +20,7 @@ layout: default
             </div>
             <div class="col-md-3">
                 <div class="price_info">
-                    <p>{{ page.price | format: decimal_places }} VNĐ</p>
+                    <p>{{ page.price }} VNĐ</p>
                     <p class="old_price">{{ page.price | plus: 20000000 }} VNĐ</p>
                 </div>
             </div>
