--- a/_includes/core/postbox.html
+++ b/_includes/core/postbox.html
@@ -22,7 +22,7 @@
                                             class="fa fa-twitter" aria-hidden="true"></i></a></li>
                             </ul>
                         </div>
-                        <a href="#"><img src="{{ site.img }}/blog/{{ post.img }}" class="img-responsive" alt="image"></a>
+                        <a href="#"><img src="{{ site.img }}/post/{{ post.img }}" class="img-responsive" alt="image"></a>
                         <ul>
                             <li><i class="fa fa-calendar" aria-hidden="true"></i>{{ post.date | date: "%d/%m/%Y"}}</li>
                         </ul>
