--- a/_includes/core/mess.html
+++ b/_includes/core/mess.html
@@ -20,7 +20,7 @@
 <div class="fb-customerchat"
   attribution=setup_tool
   page_id="100236355166074"
-theme_color="#ff0012"
-logged_in_greeting="Xin chào quý khách, vui nhắn tin hoặc gọi trực tiếp 0346 084 666 cho chúng tôi. "
-logged_out_greeting="Xin chào quý khách, vui nhắn tin hoặc gọi trực tiếp 0346 084 666 cho chúng tôi. ">
+theme_color="#fa2837"
+logged_in_greeting="Xin chào quý khách, vui lòng nhắn tin hoặc gọi trực tiếp số 0346 084 666. "
+logged_out_greeting="Xin chào quý khách, vui lòng nhắn tin hoặc gọi trực tiếp số 0346 084 666. ">
 </div>
