change car name

--- a/_includes/cars/morning.html
+++ b/_includes/cars/morning.html
@@ -7,7 +7,7 @@
                         alt="Image" /></a>
             </div>
             <div class="featured-car-content">
-                <h6><a href="{{ m.url }}">{{ m.title }}</a></h6>
+                <h6><a href="{{ m.url }}">Kia {{ m.title }}</a></h6>
                 <div class="price_info">
                     <p class="featured-price">{{ m.price }}</p>
                     <div class="car-location">
