--- a/_includes/cars/optima.html
+++ b/_includes/cars/optima.html
@@ -7,7 +7,7 @@
                         alt="Image" /></a>
             </div>
             <div class="featured-car-content">
-                <h6><a href="{{ o.url }}">{{ o.title }}</a></h6>
+                <h6><a href="{{ o.url }}">Kia {{ o.title }}</a></h6>
                 <div class="price_info">
                     <p class="featured-price">{{ o.price }}</p>
                     <div class="car-location">
