--- a/_includes/cars/rondo.html
+++ b/_includes/cars/rondo.html
@@ -7,7 +7,7 @@
                         alt="Image" /></a>
             </div>
             <div class="featured-car-content">
-                <h6><a href="{{ r.url }}">{{ r.title }}</a></h6>
+                <h6><a href="{{ r.url }}">Kia {{ r.title }}</a></h6>
                 <div class="price_info">
                     <p class="featured-price">{{ r.price }}</p>
                     <div class="car-location">
