--- a/_includes/cars/seltos.html
+++ b/_includes/cars/seltos.html
@@ -7,7 +7,7 @@
                         alt="Image" /></a>
             </div>
             <div class="featured-car-content">
-                <h6><a href="{{ se.url }}">{{ se.title }}</a></h6>
+                <h6><a href="{{ se.url }}">Kia {{ se.title }}</a></h6>
                 <div class="price_info">
                     <p class="featured-price">{{ se.price }}</p>
                     <div class="car-location">
