--- a/_includes/cars/sedona.html
+++ b/_includes/cars/sedona.html
@@ -7,7 +7,7 @@
                         alt="Image" /></a>
             </div>
             <div class="featured-car-content">
-                <h6><a href="{{ i.url }}">{{ i.title }}</a></h6>
+                <h6><a href="{{ i.url }}">Kia {{ i.title }}</a></h6>
                 <div class="price_info">
                     <p class="featured-price">{{ i.price }}</p>
                     <div class="car-location">
