change car name

--- a/_includes/core/header.html
+++ b/_includes/core/header.html
@@ -42,12 +42,11 @@
                 <div class="collapse navbar-collapse" id="navigation">
                     <ul class="nav navbar-nav">
                         {% for nav in site.data.navigation %}
-                        <li><a href="{{ nav.link }}">{{ nav.name }}</a></li>
+                        <li><a href="{{ nav.link | relative_url }}">{{ nav.name }}</a></li>
                         {% endfor %}
                     </ul>
                 </div>
             </div>
         </nav>
         <!-- Navigation end -->
-
     </header>
