--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -45,7 +45,7 @@ layout: default
                             </ul>
                         </div>
                     </div>
-                    <div class="article_img"> <img src="{{ site.img }}/post/{{ page.img }}" alt="image"> </div>
+                    <div class="article_img"> <img src="{{ site.img }}/post/{{ page.img }}" alt="{{ page.title }}"> </div>
                     <div class="article_info">
                         <p>{{ content }}</p>
                     </div>
