--- a/_includes/cars/test.html
+++ b/_includes/cars/test.html
@@ -21,22 +21,22 @@
                         </div>
                     </div>
                     <ul>
-                        <li>
+                        <li title="Chiều dài cơ sở">
                             <i class="fa fa-road" aria-hidden="true"></i>0,000 km
                         </li>
-                        <li>
+                        <li title="Trọng lượng không tải">
                             <i class="fa fa-tachometer" aria-hidden="true"></i>30.000
                             miles
                         </li>
-                        <li>
+                        <li title="Dung tích xi-lanh">
                             <i class="fa fa-calendar" aria-hidden="true"></i>2005
                             model
                         </li>
-                        <li><i class="fa fa-car" aria-hidden="true"></i>Diesel</li>
-                        <li>
+                        <li title="Loại nhiên liệu"><i class="fa fa-car" aria-hidden="true"></i>Diesel</li>
+                        <li title="Số ghế">
                             <i class="fa fa-user" aria-hidden="true"></i>5 seats
                         </li>
-                        <li>
+                        <li title="Công suất cực đại">
                             <i class="fa fa-superpowers" aria-hidden="true"></i>143 kW
                         </li>
                     </ul>
