--- a/_includes/core/head.html
+++ b/_includes/core/head.html
@@ -2,9 +2,7 @@
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1">
-    <meta name="keywords" content="">
-    <meta name="description" content="">
-    <title>{{ site.title }}</title>
+    {% seo %}
     <!--Bootstrap -->
     <link rel="stylesheet" href="{{ site.baseurl }}/assets/css/bootstrap.min.css" type="text/css">
     <!--Custome Style -->
