change page layout

--- a/_includes/custom/trending.html
+++ b/_includes/custom/trending.html
@@ -1,8 +1,8 @@
     <section class="section-padding gray-bg">
         <div class="container">
             <div class="section-header text-center">
-                <h2>Trending <span>Cars</span></h2>
-                <p>Top xe bán chạy nhất năm 2020. </p>
+                <h2>Kia <span>Top</span></h2>
+                <p>Đạt doanh số hơn 14.000 xe trong 6 tháng đầu năm 2019, Kia Việt Nam đang ngày càng khẳng định được vị thế Top 3 thương hiệu bán chạy nhất Việt Nam, minh chứng cho nỗ lực không ngừng trong việc mang đến dãy sản phẩm đa dạng phân khúc với giá bán tốt nhất và dịch vụ hàng đầu thị trường Việt.</p>
             </div>
             <div class="row">
                 <div class="col-lg-12">
