--- a/_includes/core/scripts.html
+++ b/_includes/core/scripts.html
@@ -6,3 +6,6 @@
     <!--Slider-JS-->
     <script src="{{ site.baseurl }}/assets/js/slick.min.js"></script>
     <script src="{{ site.baseurl }}/assets/js/owl.carousel.min.js"></script>
+    <!-- ListJS -->
+    <script src="{{ site.baseurl }}/assets/js/list.min.js"></script>
+    <script src="{{ site.baseurl }}/assets/js/filter-car.js"></script>
