--- a/_includes/custom/resent-cat.html
+++ b/_includes/custom/resent-cat.html
@@ -1,7 +1,7 @@
 <section class="section-padding gray-bg">
   <div class="container">
     <div class="section-header text-center">
-      <h2>Showroom <span>KIA Yên Nghĩa</span></h2>
+      <h2>Kia <span>Motors</span></h2>
       <p>Với sự vươn mình phát triển mạnh mẽ của thương hiệu, KIA chính là một nhịp đập mới cho ngành công nghiệp ô tô toàn cầu. Như giai điệu, như làn gió chạm vào trái tim của bạn, KIA không ngừng nỗ lực mang đến cho khách hàng một cuộc sống mới mẻ và thú vị hơn mỗi ngày.</p>
     </div>
     <div class="row">
