--- a/_includes/details/accessories.html
+++ b/_includes/details/accessories.html
@@ -1,68 +1,13 @@
 <div role="tabpanel" class="tab-pane" id="accessories">
     <!--Accessories-->
     <table>
-        <thead>
-            <tr>
-                <th colspan="2">C</th>
-            </tr>
-        </thead>
         <tbody>
+            {% for ac in page.acc %}
             <tr>
-                <td>Air Conditioner</td>
-                <td><i class="fa fa-check" aria-hidden="true"></i></td>
+                <td>{{ ac.name }}</td>
+                <td><i class="fa fa-{{ ac.icon }}" aria-hidden="true"></i></td>
             </tr>
-            <tr>
-                <td>AntiLock Braking System</td>
-                <td><i class="fa fa-check" aria-hidden="true"></i></td>
-            </tr>
-            <tr>
-                <td>Power Steering</td>
-                <td><i class="fa fa-check" aria-hidden="true"></i></td>
-            </tr>
-            <tr>
-                <td>Power Windows</td>
-                <td><i class="fa fa-check" aria-hidden="true"></i></td>
-            </tr>
-            <tr>
-                <td>CD Player</td>
-                <td><i class="fa fa-close" aria-hidden="true"></i></td>
-            </tr>
-            <tr>
-                <td>Leather Seats</td>
-                <td><i class="fa fa-check" aria-hidden="true"></i></td>
-            </tr>
-            <tr>
-                <td>Central Locking</td>
-                <td><i class="fa fa-check" aria-hidden="true"></i></td>
-            </tr>
-            <tr>
-                <td>Power Door Locks</td>
-                <td><i class="fa fa-check" aria-hidden="true"></i></td>
-            </tr>
-            <tr>
-                <td>Brake Assist</td>
-                <td><i class="fa fa-check" aria-hidden="true"></i></td>
-            </tr>
-            <tr>
-                <td>Driver Airbag</td>
-                <td><i class="fa fa-check" aria-hidden="true"></i></td>
-            </tr>
-            <tr>
-                <td>Passenger Airbag</td>
-                <td><i class="fa fa-check" aria-hidden="true"></i></td>
-            </tr>
-            <tr>
-                <td>Crash Sensor</td>
-                <td><i class="fa fa-check" aria-hidden="true"></i></td>
-            </tr>
-            <tr>
-                <td>Engine Check Warning</td>
-                <td><i class="fa fa-check" aria-hidden="true"></i></td>
-            </tr>
-            <tr>
-                <td>Automatic Headlamps</td>
-                <td><i class="fa fa-check" aria-hidden="true"></i></td>
-            </tr>
+            {% endfor %}
         </tbody>
     </table>
 </div>
