--- a/_includes/details/slider.html
+++ b/_includes/details/slider.html
@@ -1,4 +1,5 @@
 <div class="listing_images">
+    {% if page.sliders %}
     <div id="listing_images_slider" class="listing_images_slider">
         {% for slider in page.sliders %}
         <div><img src="{{ site.baseurl }}{{ site.img }}{{ page.url }}{{ slider }}.jpg" alt="image"></div>
@@ -9,4 +10,5 @@
         <div><img src="{{ site.baseurl }}{{ site.img }}{{ page.url }}{{ slider }}.jpg" alt="image"></div>
         {% endfor %}
     </div>
+    {% endif %}
 </div>
