--- a/_includes/details/staff.html
+++ b/_includes/details/staff.html
@@ -2,7 +2,7 @@
     <h5><i class="fa fa-address-card-o" aria-hidden="true"></i> Nhân viên phụ trách </h5>
 </div>
 <div class="dealer_detail"> <img src="{{ site.img }}/ava.jpg" alt="image">
-    <p><span>Tên:</span> Dương Vũ</p>
-    <p><span>Mail:</span><a href="mailto:{{ site.email }}">{{ site.email }}</a></p>
-    <p><span>Phone:</span><a href="tel:{{ site.phone }}">{{ site.phone }}</a></p>
+    <p><i class="fa fa-user-circle-o" aria-hidden="true"></i>  {{ site.author }}</p>
+    <p><i class="fa fa-envelope-o" aria-hidden="true"></i><a href="mailto:{{ site.email }}">{{ site.email }}</a></p>
+    <p><i class="fa fa-mobile" aria-hidden="true"></i><a href="tel:{{ site.phone }}">{{ site.phone }}</a></p>
 </div>
