add call + zalo button

--- a/_includes/core/call-me.html
+++ b/_includes/core/call-me.html
@@ -1,1 +1,14 @@
-<div class="call-me"><i class="fa fa-mobile" aria-hidden="true"> Gọi ngay: <a href="tel:{{ site.phone }}">{{ site.phone }}</a></i> </a> </div>
+<a class="add-widget widget-zalo"
+  href="https://zalo.me/0346084666"
+  title="Chát trên Zalo"
+  target="_blank"
+  ><span class="widget-circle"><i class="fa-icon">&nbsp;</i>
+</span>
+</a>
+<a class="phone-ring" href="tel:0346084666" title="Gọi để được tư vấn ngay!">
+  <span class="phone-circle">
+    <i class="fa fa-phone"></i>
+    <span class="ping"></span>
+  </span>
+  <span class="phone">0346 084 666</span>
+</a>
