--- a/_includes/core/head.html
+++ b/_includes/core/head.html
@@ -19,7 +19,7 @@
 
     <!-- Custom Colors -->
     <link rel="stylesheet" href="{{ site.baseurl }}/assets/colors/red.css">
-
+    <link rel="stylesheet" href="{{ site.baseurl }}/assets/css/call.css">
     <!-- Fav and touch icons -->
     <link rel="apple-touch-icon-precomposed" sizes="144x144"
         href="{{ site.baseurl }}/assets/images/favicon-icon/apple-touch-icon-144-precomposed.png">
