--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -19,7 +19,13 @@
     {% include core/footer.html %}
     <!-- /Footer-->
 
+    <!-- Call me -->
+    {% include core/call-me.html %}
+    <!-- /Call me -->
+    
+    <!-- FB Messenger -->
     {% include core/mess.html %}
+    <!-- /FB Messenger -->
     
     <!--Back to top-->
     {% include core/back-top.html %}
