add call + zalo button

--- a/_includes/core/call-me.html
+++ b/_includes/core/call-me.html
@@ -1,6 +1,6 @@
 <a class="add-widget widget-zalo"
   href="https://zalo.me/0346084666"
-  title="Chát trên Zalo"
+  title="Chat trên Zalo"
   target="_blank"
   ><span class="widget-circle"><i class="fa-icon">&nbsp;</i>
 </span>
