--- a/_includes/core/header.html
+++ b/_includes/core/header.html
@@ -38,6 +38,7 @@
                         <span class="icon-bar"></span> <span class="icon-bar"></span> <span class="icon-bar"></span>
                     </button>
                 </div>
+                {% include core/search.html %}
                 <div class="collapse navbar-collapse" id="navigation">
                     <ul class="nav navbar-nav">
                         {% for nav in site.data.navigation %}
