--- a/_includes/custom/banners.html
+++ b/_includes/custom/banners.html
@@ -1,15 +1,64 @@
-<section id="banner" class="banner-section">
-    <div class="container">
-        <div class="div_zindex">
-            <div class="row">
-                <div class="col-md-4">
-                    <div class="banner_content">
-                        <a href="{{ site.baseurl }}/car-models/#soluto" class="btn">Khám phá ngay <span class="angle_arrow"><i class="fa fa-angle-right"
-                                    aria-hidden="true"></i></span>
-                        </a>
-                    </div>
-                </div>
-            </div>
-        </div>
+<section id="banner" class="">
+  <div id="myCarousel" class="carousel slide" data-ride="carousel">
+    <!-- Indicators -->
+    <ol class="carousel-indicators">
+      <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+      <li data-target="#myCarousel" data-slide-to="1"></li>
+      <li data-target="#myCarousel" data-slide-to="2"></li>
+      <li data-target="#myCarousel" data-slide-to="3"></li>
+    </ol>
+
+    <!-- Wrapper for slides -->
+    <div class="carousel-inner">
+      <div class="item active">
+        <a href="#">
+          <img
+            src="../../assets/images/banner/banner-web-cerato.jpg"
+            alt="Kia Cerato"
+            style="width: 100%"
+          />
+        </a>
+      </div>
+
+      <div class="item">
+        <a href="#">
+          <img
+            src="../../assets/images/banner/banner-web-morning-01.jpg"
+            alt="Kia Morning"
+            style="width: 100%"
+          />
+        </a>
+      </div>
+
+      <div class="item">
+        <a href="#">
+          <img
+            src="../../assets/images/banner/banner-web-sedona.jpg"
+            alt="Kia Sedona"
+            style="width: 100%"
+          />
+        </a>
+      </div>
+
+      <div class="item">
+        <a href="#">
+          <img
+            src="../../assets/images/banner/banner-web-soluto.jpg"
+            alt="Kia Soluto"
+            style="width: 100%"
+          />
+        </a>
+      </div>
     </div>
+
+    <!-- Left and right controls -->
+    <a class="left carousel-control" href="#myCarousel" data-slide="prev">
+      <span class="glyphicon glyphicon-chevron-left"></span>
+      <span class="sr-only">Previous</span>
+    </a>
+    <a class="right carousel-control" href="#myCarousel" data-slide="next">
+      <span class="glyphicon glyphicon-chevron-right"></span>
+      <span class="sr-only">Next</span>
+    </a>
+  </div>
 </section>
