change car list style

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2820,7 +2820,7 @@ form .slider.slider-horizontal {
   overflow: hidden;
 }
 .active {
-  display: flex;
+  display: block;
 }
 .product-listing-img {
   float: left;
