--- a/_includes/core/header.html
+++ b/_includes/core/header.html
@@ -6,6 +6,7 @@
                         <div class="logo"> <a href="/"><img src="{{ site.baseurl }}/assets/images/kia-logo.png" alt=" Kia Yên Nghĩa" /></a>
                         </div>
                     </div>
+                    <span class="logo-text">KIA YÊN NGHĨA</span>
                     <div class="col-sm-9 col-md-10">
                         <div class="header_info">
                             <div class="header_widgets">
