--- a/_includes/custom/about.html
+++ b/_includes/custom/about.html
@@ -2,13 +2,13 @@
     <div class="container">
         <div class="section-header text-center">
             <h2>SHOWROOM <span>KIA YÊN NGHĨA</span></h2>
-            <p>KIA Yên Nghĩa tọa lạc tại Số 889, Tổ 9, Phường Phú Lãm, Q. Hà Đông, TP Hà Nội. Quy mô showroom bao gồm
+            <p>Địa chỉ Số 889, Tổ 9, Phường Phú Lãm, Q. Hà Đông, TP Hà Nội. Quy mô showroom bao gồm
                 khu trung bày xe, xưởng dịch vụ và kho cung cấp phụ tùng chính hãng của Kia.</p>
         </div>
         <div class="row">
             <div class="col-lg-6 col-sm-6">
                 <div class="looking-car">
-                    <div class="looking-cat-image"> <img src="assets/images/14-turbo-premium.png" alt="Image" /> </div>
+                    <div class="looking-cat-image"> <img src="assets/images/KIA-SELTOS.png" alt="Image" /> </div>
                     <div class="looking-car-content">
                         <h3>SELTOS <span>2020</span></h3>
                         <p>KẾT HỢP HOÀN HẢO GIỮA HÌNH TƯỢNG MẠNH MẼ, PHONG CÁCH NĂNG ĐỘNG CÙNG CÁC CHI TIẾT TINH XẢO.
@@ -19,9 +19,9 @@
             </div>
             <div class="col-lg-6 col-sm-6">
                 <div class="looking-car">
-                    <div class="looking-cat-image"> <img src="assets/images/luxury-d.png" alt="Image" /> </div>
+                    <div class="looking-cat-image"> <img src="assets/images/sorento-2021.png" alt="Image" /> </div>
                     <div class="looking-car-content">
-                        <h3>SEDONA <span>LUXURY</span></h3>
+                        <h3>SORENTO <span>2021</span></h3>
                         <p>KẾT HỢP HOÀN HẢO GIỮA HÌNH TƯỢNG MẠNH MẼ, PHONG CÁCH NĂNG ĐỘNG CÙNG CÁC CHI TIẾT TINH XẢO.
                         </p>
                         <a href="" class="btn">Xem ngay<i class="fa fa-chevron-circle-right" aria-hidden="true"></i></a>
