--- a/_includes/custom/banners.html
+++ b/_includes/custom/banners.html
@@ -6,6 +6,9 @@
       <li data-target="#myCarousel" data-slide-to="1"></li>
       <li data-target="#myCarousel" data-slide-to="2"></li>
       <li data-target="#myCarousel" data-slide-to="3"></li>
+      <li data-target="#myCarousel" data-slide-to="4"></li>
+      <li data-target="#myCarousel" data-slide-to="5"></li>
+      <li data-target="#myCarousel" data-slide-to="6"></li>
     </ol>
 
     <!-- Wrapper for slides -->
@@ -13,7 +16,7 @@
       <div class="item active">
         <a href="#">
           <img
-            src="../../assets/images/banner/banner-web-cerato.jpg"
+            src="../../assets/images/banner/banner-all.jpg"
             alt="Kia Cerato"
             style="width: 100%"
           />
@@ -33,7 +36,7 @@
       <div class="item">
         <a href="#">
           <img
-            src="../../assets/images/banner/banner-web-sedona.jpg"
+            src="../../assets/images/banner/banner-web-soluto.jpg"
             alt="Kia Sedona"
             style="width: 100%"
           />
@@ -43,7 +46,37 @@
       <div class="item">
         <a href="#">
           <img
-            src="../../assets/images/banner/banner-web-soluto.jpg"
+            src="../../assets/images/banner/banner-web-cerato.jpg"
+            alt="Kia Soluto"
+            style="width: 100%"
+          />
+        </a>
+      </div>
+
+      <div class="item">
+        <a href="#">
+          <img
+            src="../../assets/images/banner/banner-web-seltos.jpg"
+            alt="Kia Soluto"
+            style="width: 100%"
+          />
+        </a>
+      </div>
+
+      <div class="item">
+        <a href="#">
+          <img
+            src="../../assets/images/banner/banner-web-sorento.jpg"
+            alt="Kia Soluto"
+            style="width: 100%"
+          />
+        </a>
+      </div>
+
+      <div class="item">
+        <a href="#">
+          <img
+            src="../../assets/images/banner/banner-web-sedona.jpg"
             alt="Kia Soluto"
             style="width: 100%"
           />
