--- a/_includes/core/mess.html
+++ b/_includes/core/mess.html
@@ -21,6 +21,6 @@
   attribution=setup_tool
   page_id="100236355166074"
 theme_color="#ff0012"
-logged_in_greeting="Xin chào quý khách, vui nhắn tin hoặc gọi trực tiếp 0346 084 666 cho chúng tôi. "
-logged_out_greeting="Xin chào quý khách, vui nhắn tin hoặc gọi trực tiếp 0346 084 666 cho chúng tôi. ">
+logged_in_greeting="Xin chào anh/chị, vui nhắn tin hoặc gọi trực tiếp 0346 084 666 để được tư vấn. "
+logged_out_greeting="Xin chào anh/chị, vui nhắn tin hoặc gọi trực tiếp 0346 084 666 để được tư vấn. ">
 </div>
